# mpc-wallet

./: .gitignore  BUN_SETUP.md  CLAUDE.md  CONSOLE_LOG_ANALYSIS.md  Cargo.toml  DISCOVERY_FIX_SUMMARY.md  DKG_SESSION_FIXES.md  DKG_TEST_GUIDE.md  DOCUMENTATION_STATUS.md  FINAL_FIX_SUMMARY.md  FINAL_TEST_RESULTS.md  IMPLEMENTATION_PLAN.md  KEYSTORE_IMPORT_FIX.md  MIGRATION_SUMMARY.md  MONOREPO.md  MPC_WALLET_TECHNICAL_DOCUMENTATION.md  MULTI_LAYER2_SUPPORT.md  NAMING_CONVENTIONS.md  README.md  README_MONOREPO.md  REMOVED_FAILING_TESTS.md  TESTING.md  TEST_ISOLATION_FIXES.md  TEST_MIGRATION_SUMMARY.md  TEST_RESULTS_SUMMARY.md  bun-test.config.ts  bun.config.ts  bun.test.config.ts  bunfig.toml  flake.nix  package-lock.json  package.json  remove-debug-logs.sh  run-debug.sh  tailwind.config.js  test-dapp.html  test-dkg-session.sh  test-eip6963.js  test-extension-loaded.html  test-import.js  (+7 more)
apps/cli-node/: Cargo.toml  run_tests.sh
apps/cli-node/docs/: index.md  keystore_session_ux_flow.md
apps/cli-node/docs/user_guides/: 01_getting_started.md  02_keystore_overview.md  03_keystore_usage.md  04_keyboard_driven_interface.md
apps/cli-node/examples/: dkg.rs  eth_dkg.rs  solana_dkg.rs
apps/cli-node/src/: app_runner.rs  cli_node.rs  lib.rs
apps/cli-node/src/blockchain/: mod.rs
apps/cli-node/src/handlers/: dkg_commands.rs  extension_commands.rs  keystore_commands.rs  mesh_commands.rs  mod.rs  network_test.rs  offline_commands.rs  send_commands.rs  session_commands.rs  signing_commands.rs  signing_commands_test.rs
apps/cli-node/src/keystore/: encryption.rs  encryption_test.rs  extension_compat.rs  extension_compat_test.rs  models.rs  storage.rs  storage_test.rs
apps/cli-node/src/network/: webrtc.rs  webrtc_test.rs  websocket.rs
apps/cli-node/src/offline/: import.rs  session.rs
apps/cli-node/src/protocal/: dkg.rs  dkg_test.rs  mod.rs  signal.rs
apps/cli-node/src/ui/: mod.rs  provider.rs  tui.rs
apps/cli-node/src/utils/: device.rs  mod.rs  negotiation.rs  state.rs
apps/cli-node/tests/: integration_test.rs
apps/native-node/: Cargo.toml  build.rs
apps/native-node/docs/: README.md  REFACTOR_PLAN.md
apps/native-node/src/: app.rs  commands.rs  config.rs  core_adapter.rs  main.rs  main_debug.rs  main_event_driven.rs  main_fixed.rs  main_original.rs  main_simple.rs  main_test.rs  mpc_manager.rs  state.rs  ui_callback.rs
apps/native-node/src/network/: mod.rs  webrtc.rs  websocket.rs
apps/native-node/ui/: main.slint  main_clean.slint  main_enhanced.slint  main_modern.slint  main_reactive.slint  main_simple.slint  main_styled.slint  style.slint
apps/native-node/ui/components/: connection_status.slint  dkg_progress.slint  offline_mode.slint  session_list.slint  wallet_selector.slint
apps/signal-server/cloudflare-worker/: Cargo.toml  README.md  wrangler.toml
apps/signal-server/cloudflare-worker/src/: lib.rs
apps/tui-node/: Cargo.toml  Dockerfile  PERFORMANCE_FIXES.md  docker-compose.yml  run-e2e-tests.sh  run-offline-dkg-audit.sh  test_deterministic_address.sh  test_menu_fix.rs
apps/tui-node/audit_offline_dkg_20250906_155925/: README.md
apps/tui-node/audit_offline_dkg_20250906_160138/: README.md
apps/tui-node/audit_offline_dkg_20250906_160438/: README.md  audit_report.md
apps/tui-node/audit_offline_dkg_20250906_160438/artifacts/: group_key.txt  key_package_p1.json  key_package_p2.json  key_package_p3.json
apps/tui-node/benches/: performance_bench.rs  performance_benchmark.rs
apps/tui-node/docs/: COMPLETE_OFFLINE_WORKFLOW.md  COMPLETE_TUI_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  E2E_TEST_DESIGN.md  ERROR_HANDLING_GUIDE.md  HYBRID_MODE_TEST_DESIGN.md  KEYBOARD_HANDLING_GUIDE.md  KEYBOARD_NAVIGATION_GUIDE.md  KEYSTORE_E2E_TEST_PLAN.md  MPC_WALLET_TUI_ARCHITECTURE.md  OFFLINE_DKG_GUIDE.md  README.md  WEBRTC_MESH_IMPLEMENTATION.md  WEBRTC_MESH_TEST_DESIGN.md  index.md  performance-analysis.md
apps/tui-node/docs/architecture/: ARCHITECTURE.md  DKG_FLOWS.md  ELM_ARCHITECTURE.md  README.md  SECURITY.md  keystore_design.md
apps/tui-node/docs/guides/: README.md  USER_GUIDE.md  offline-mode.md
apps/tui-node/docs/protocol/: 01_webrtc_signaling.md
apps/tui-node/docs/ui/: IMPORT_EXPORT_WIREFRAMES.md  SETTINGS_SUBMENUS_WIREFRAMES.md  WALLET_FLOW_WIREFRAMES.md
apps/tui-node/examples/: elm_demo.rs  hybrid_mode_e2e_test.rs  keystore_e2e_test.rs  offline_dkg_demo.rs  offline_dkg_signing_demo.rs  offline_frost_dkg_signing.rs  offline_frost_tui_simulation.rs  test_dkg_data_channel.rs  test_dkg_data_channel.rs.disabled  test_join_session_navigation.rs  test_keyboard_events.rs  test_session_loading.rs  test_session_loading_simple.rs  webrtc_mesh_e2e_test.rs
apps/tui-node/scripts/: build-signal-server.sh  build-tui-node.sh  fix_all_keyboard_handling.sh  launch-3node-cluster.sh  monitor-cluster.sh  run-performance-analysis.sh  run-signal-server.sh
apps/tui-node/src/: app_runner.rs  blockchain_config.rs  blockchain_config_test.rs  errors.rs  lib.rs  security.rs
apps/tui-node/src/blockchain/: bitcoin.rs  ethereum.rs  solana.rs
apps/tui-node/src/core/: connection_manager.rs  dkg_manager.rs  mod.rs  offline_manager.rs  session_manager.rs  wallet_manager.rs
apps/tui-node/src/elm/: adaptive_event_loop.rs  app.rs  channel_config.rs  command.rs  differential_update.rs  domain_types.rs  error.rs  error_handler.rs  help_system.rs  loading.rs  message.rs  mod.rs  model.rs  model_split.rs  navigation.rs  repository.rs  subscription_manager.rs  update.rs  update.rs.bak  webrtc_signaling.rs  ws_runtime.rs
apps/tui-node/src/handlers/: dkg_commands.rs  extension_commands.rs  keystore_commands.rs  mesh_commands.rs  mod.rs  offline_commands.rs  send_commands.rs  session_handler.rs  session_rejoin.rs  signing_commands.rs  signing_commands_simple.rs  wallet_commands.rs
apps/tui-node/src/hybrid/: coordinator.rs  transport.rs
apps/tui-node/src/keystore/: encryption.rs  extension_compat.rs  frost_keystore.rs  mod.rs  models.rs  (+1 more)
apps/tui-node/tests/: component_rendering.rs  event_system_test.rs  key_handling_test.rs  load_test.rs  offline_dkg_e2e_test.rs  update_transitions.rs
(+538 files in other folders)
