[workspace]
members = [
    "apps/cli-node",
    "apps/native-node",
    "apps/signal-server/server",
    "apps/signal-server/cloudflare-worker",
    "packages/@mpc-wallet/frost-core",
    "packages/@mpc-wallet/core-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["MPC Wallet Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/hecoinfo/mpc-wallet"

[workspace.dependencies]
# Common dependencies shared across workspace members
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
getrandom = { version = "0.2", features = ["js"] }

# FROST dependencies
frost-core = { version = "2.0.0-rc.0", features = ["serde"] }
frost-secp256k1 = { version = "2.0.0-rc.0", features = ["serde"] }
frost-ed25519 = { version = "2.0.0-rc.0", features = ["serde"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# WebRTC dependencies
webrtc = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
