[package]
name = "mpc-wallet-native"
version = "0.1.0"
edition = "2021"
description = "Native MPC Wallet Node with Slint UI"
license = "Apache-2.0"

[dependencies]
# Slint for native UI (using femtovg renderer for better font rendering)
slint = { version = "1.12.1", features = ["backend-winit", "backend-winit-x11", "backend-winit-wayland", "renderer-winit-femtovg"] }

# MPC Wallet dependencies
mpc-wallet-frost-core = { path = "../../packages/@mpc-wallet/frost-core" }
cli-node = { path = "../cli-node" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# File system
dirs = "5.0"

# UUID generation
uuid = { version = "1.5", features = ["v4", "serde"] }

# Configuration
toml = "0.8"

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "mpc-wallet-native"
path = "src/main.rs"

[[bin]]
name = "mpc-wallet-test"
path = "src/main_test.rs"

[build-dependencies]
slint-build = "1.12.1"