[package]
name = "mpc-wallet-native"
version = "0.1.0"
edition = "2024"
description = "Native MPC Wallet Node with Slint UI"
license = "Apache-2.0"

[dependencies]
# Slint for native UI (using femtovg renderer for better font rendering)
slint = { version = "1.12.1", features = ["backend-winit", "backend-winit-x11", "backend-winit-wayland", "renderer-winit-femtovg"] }

# MPC Wallet dependencies
mpc-wallet-frost-core = { path = "../../packages/@mpc-wallet/frost-core" }
tui-node = { path = "../tui-node" }

# Frost dependencies for Ciphersuite types
frost-core = { version = "2.1.0", features = ["serde"] }
frost-ed25519 = "2.1.0"
frost-secp256k1 = "2.1.0"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async trait
async-trait = "0.1"

# File system
dirs = "5.0"

# UUID generation
uuid = { version = "1.5", features = ["v4", "serde"] }

# Configuration
toml = "0.8"

# WebSocket client
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# WebRTC signal server types
webrtc-signal-server = { path = "../signal-server/server" }

# For reactive/stream patterns
tokio-stream = "0.1"

[[bin]]
name = "mpc-wallet-native"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.12.1"