[package]
name = "mpc-wallet-native"
version = "0.1.0"
edition = "2024"
description = "Native MPC Wallet Node with Slint UI"
license = "Apache-2.0"

[dependencies]
# Slint for native UI (using femtovg renderer for better font rendering)
slint = { version = "1.9.1", features = ["backend-winit", "backend-winit-x11", "backend-winit-wayland", "renderer-winit-femtovg"] }

# MPC Wallet dependencies
mpc-wallet-frost-core = { path = "../../packages/@mpc-wallet/frost-core" }
tui-node = { path = "../tui-node" }

# Frost dependencies for Ciphersuite types
frost-core = { version = "2.2.0", features = ["serde"] }
frost-ed25519 = "2.2.0"
frost-secp256k1 = "2.2.0"

# Async runtime
tokio = { version = "1.42.0", features = ["full"] }

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.143"

# Error handling
thiserror = "1.0"
anyhow = "1.0.99"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Async trait
async-trait = "0.1.83"

# File system
dirs = "5.0.1"

# UUID generation
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Configuration
toml = "0.8.19"

# WebSocket client
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3.31"

# Time handling
chrono = { version = "0.4.39", features = ["serde"] }

# WebRTC signal server types
webrtc-signal-server = { path = "../signal-server/server" }

# For reactive/stream patterns
tokio-stream = "0.1.17"

[[bin]]
name = "mpc-wallet-native"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.9.1"