[package]
name = "tui-node"
version = "0.1.0"
edition = "2024"

[lib]
name = "tui_node"
path = "src/lib.rs"

[dependencies]
# Use our shared frost-core library
mpc-wallet-frost-core = { path = "../../packages/@mpc-wallet/frost-core" }
# Use our blockchain package
mpc-wallet-blockchain = { path = "../../packages/@mpc-wallet/blockchain" }

# Still need these for specific types
frost-ed25519 = { version = "2.2.0", features = ["serde", "serialization"] }
frost-secp256k1 = { version = "2.2.0", features = ["serde", "serialization"] }
frost-core = { version = "2.2.0", features = ["serde"] }
rand = "0.8.5"
solana-sdk = "3.0.0"
solana-client = "3.0.1"
solana-system-program = "3.0.1"
bincode = { version = "2.0.1", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
rand_core = "0.6.4"
curve25519-dalek = "4.1.3"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3.31"
futures = "0.3.31"
itertools = "0.13.0"
serde_json = "1.0.143"
serde = { version = "1.0.217", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = { version = "0.29.0" }
tuirealm = "3.1.0"
tui-realm-stdlib = "3.0.0"
anyhow = "1.0.99"
url = "2.5.7"
webrtc = "0.13.0"
lazy_static = "1.5.0"
bs58 = "0.5.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
ethers-signers = "2.0.14"
k256 = "0.13.4"
elliptic-curve = "0.13.8"
rlp = "0.6.1"
clap = { version = "4.5.21", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
webrtc-signal-server = { path = "../signal-server/server" }
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Performance optimization dependencies
dashmap = "6.1.0"
crossbeam = "0.8.4"
parking_lot = "0.12.3"
rayon = "1.10.0"

# Metrics and profiling (optional, for development)
aes-gcm = "0.10.3"
argon2 = "0.5.3"
dirs = "5.0.1"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
async-trait = "0.1.83"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
gethostname = "0.5.0"
lru = "0.12.5"


[dev-dependencies]
tempfile = "3.14.0"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "performance_bench"
harness = false

[[bin]]
name = "mpc-wallet-tui"
path = "src/bin/mpc-wallet-tui.rs"
